syntax = "proto3";

package pb;

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

message CompanyPharma {
  int32 id = 1;
  string name = 2;
  optional string code = 3;
  optional string country = 4;
  optional string address = 5;
  optional string type = 6;
}
