syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "entities/company_pharma.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

// TODO: List
message CompanyPharmaListRequest {
  optional int32 page = 1;
  optional int32 limit = 2;
  optional string search = 3;
  optional string type = 4;
}

message CompanyPharmaListResponse {
  int32 code = 1;
  string message = 2;
  repeated CompanyPharma details = 3;
}

// TODO: Create
message CompanyPharmaCreateRequest {
  int32 company = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "int32 value field",
    required: [
      "company"
    ],
  }];
  string code = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "string value field",
    required: [
      "code"
    ],
  }];
  string name = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "string value field",
    required: [
      "name"
    ],
  }];
  string country = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "string value field",
    required: [
      "country"
    ],
  }];
  string address = 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "string value field",
    required: [
      "address"
    ],
  }];
  string description = 6;
  TypeEnum type = 7 ;

  enum TypeEnum {
    PRODUCTION = 0;
    REGISTERED = 1;
  }
}

message CompanyPharmaCreateResponse {
  int32 code = 1;
  string message = 2;
  int32 details = 3;
}

// TODO: Detail
message CompanyPharmaDetailRequest {
  int32 id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "int32 value field",
    required: [
      "id"
    ],
  }];
}

message CompanyPharmaDetailResponse {
  int32 code = 1;
  string message = 2;
  CompanyPharma details = 3;
}

// TODO: Update
message CompanyPharmaUpdateRequest {
  int32 id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "string value field",
    required: [
      "id"
    ],
  }];
  string code = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "string value field",
    required: [
      "code"
    ],
  }];
  string name = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "string value field",
    required: [
      "name"
    ],
  }];
  string country = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "string value field",
    required: [
      "country"
    ],
  }];
  string address = 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "string value field",
    required: [
      "address"
    ],
  }];
  string description = 6;
}

message CompanyPharmaUpdateResponse {
  int32 code = 1;
  string message = 2;
  int32 details = 3;
}

// TODO: Delete
message CompanyPharmaDeleteRequest {
  int32 id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "int32 value field",
    required: [
      "id"
    ],
  }];
}

message CompanyPharmaDeleteResponse {
  int32 code = 1;
  string message = 2;
}